# Face-Recognition-from-Videos

./: .replit  README.md  app.py  model.py  pyproject.toml  requirements.txt
templates/: bootstrap.html  contactus.html  detection.html  home.html  index.html  indexnav.html  login.html  signup.html  video.html  videodrop.html
